# AssistantSA

./: .env.example  .gitignore  CodePen_Example.txt  PROMPT_cross_platform.md  README.md  WAKE_WORD_PLAN.md  bug_report.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
application-plane/backend/: README.md
application-plane/backend/ap-assistant/: package.json  tsconfig.json
application-plane/backend/ap-assistant/src/: core.ts  handler.ts  (+5 more)
application-plane/backend/ap-civic/: package.json
application-plane/backend/ap-notifications/: package.json
application-plane/backend/ap-reminders/: package.json
application-plane/backend/ap-server/: package.json
application-plane/backend/ap-utility/: package.json
application-plane/backend/ap-voice/: Cargo.toml  README.md
application-plane/backend/ap-voice/src/: lib.rs  main.rs  service.rs  types.rs
application-plane/backend/crawl-service/: README.md  crawl_service.py  requirements.txt
application-plane/backend/keys/: public.pem
application-plane/mobile/resident-mobile/: README.md  app.json  getdevserver.d.ts  metro.config.js  onnx-assets.d.ts  package-lock.json  package.json
scripts/: calib_generate.sh  generate_keys.mjs  make_config.py  sign_token.mjs  train_wake_word.py  ww_train.sh
supplemental_instructions/: adding_scrape_scripts.md  android_deployment.md  android_emulator_testing.md  codespaces_deployment.md  ios_simulator_testing.md  mobile_deployment.md  package_installation_instructions.md  tailscale_setup.md
tools/login-flow-recorder/: README.md  recorder.py  requirements.txt
(+101 files in other folders)
